<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerFaceType"
        android:layout_below="@+id/spinnerSize" 
        android:spinnerMode="dialog"/>

    <Spinner
        android:id="@+id/spinnerFaceType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerImageType"
        android:layout_below="@+id/spinnerColor" />

    <Spinner
        android:id="@+id/spinnerImageType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerFaceType"
        android:layout_toRightOf="@+id/tvImageType" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinnerImageType"
        android:layout_marginTop="20dp"
        android:text="@string/image_type_label" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerImageType"
        android:layout_below="@+id/spinnerImageType" />

    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerColor"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/etDomian"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerLanguage"
        android:layout_below="@+id/spinnerLanguage"
        android:ems="10"
        android:hint="@string/domain_hint" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvImageType"
        android:layout_alignTop="@+id/spinnerLanguage"
        android:layout_marginTop="20dp"
        android:text="@string/language_label" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerFaceType"
        android:layout_alignLeft="@+id/tvType"
        android:text="@string/color_label" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerColor"
        android:layout_alignLeft="@+id/tvColor"
        android:text="@string/size_label" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinnerFaceType"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/spinnerFaceType"
        android:text="@string/face_type_label" />

    <TextView
        android:id="@+id/tvDomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etDomian"
        android:layout_toLeftOf="@+id/etDomian"
        android:text="@string/site_label" />

</RelativeLayout>
